[package]
name = "slack-with-types"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "slack-with-types offers a client to the Slack Web APIs."
repository = "https://github.com/illicitonion/slack-with-types"
readme = "README.md"
license = "BSD-3-Clause"

[dependencies]
email_address = "0.2.9"
futures = "0.3.31"
governor = "0.10.0"
http = "1.3.1"
http-serde = "2.1.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["time"] }
tracing = "0.1.41"
